etc/iptables/iptables-nth
# Generated by iptables-save v1.4.8 on Thu Nov  8 15:53:28 2012
*nat
:PREROUTING ACCEPT [52647:5385668]
:POSTROUTING ACCEPT [3172:236552]
:OUTPUT ACCEPT [14403:1015982]
-A POSTROUTING -o ppp0 -j MASQUERADE 
-A POSTROUTING -o ppp1 -j MASQUERADE 
-A POSTROUTING -o ppp2 -j MASQUERADE 
-A POSTROUTING -o ppp3 -j MASQUERADE 
-A POSTROUTING -o ppp4 -j MASQUERADE 
-A POSTROUTING -o ppp5 -j MASQUERADE 
-A POSTROUTING -o ppp6 -j MASQUERADE 
-A POSTROUTING -o ppp7 -j MASQUERADE 
COMMIT
# Completed on Thu Nov  8 15:53:28 2012
# Generated by iptables-save v1.4.8 on Thu Nov  8 15:53:28 2012
*mangle
:PREROUTING ACCEPT [166336:63896594]
:INPUT ACCEPT [164384:63789471]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [160368:78076529]
:POSTROUTING ACCEPT [160368:78076529]
-A OUTPUT -j CONNMARK --restore-mark --nfmask 0xffffffff --ctmask 0xffffffff 
-A OUTPUT -m state --state NEW -m statistic --mode nth --every 8 -j MARK --set-xmark 0x1/0xffffffff 
-A OUTPUT -m state --state NEW -m statistic --mode nth --every 8 --packet 1 -j MARK --set-xmark 0x2/0xffffffff 
-A OUTPUT -m state --state NEW -m statistic --mode nth --every 8 --packet 2 -j MARK --set-xmark 0x3/0xffffffff 
-A OUTPUT -m state --state NEW -m statistic --mode nth --every 8 --packet 3 -j MARK --set-xmark 0x4/0xffffffff 
-A OUTPUT -m state --state NEW -m statistic --mode nth --every 8 --packet 4 -j MARK --set-xmark 0x5/0xffffffff 
-A OUTPUT -m state --state NEW -m statistic --mode nth --every 8 --packet 5 -j MARK --set-xmark 0x6/0xffffffff 
-A OUTPUT -m state --state NEW -m statistic --mode nth --every 8 --packet 6 -j MARK --set-xmark 0x7/0xffffffff 
-A OUTPUT -m state --state NEW -m statistic --mode nth --every 8 --packet 7 -j MARK --set-xmark 0x8/0xffffffff 
-A OUTPUT -j CONNMARK --save-mark --nfmask 0xffffffff --ctmask 0xffffffff 
-A OUTPUT -s 192.168.2.126/32 -d 192.168.2.253/32 -j MARK --set-xmark 0x10/0xffffffff 
COMMIT
# Completed on Thu Nov  8 15:53:28 2012
# Generated by iptables-save v1.4.8 on Thu Nov  8 15:53:28 2012
*filter
:INPUT ACCEPT [709693:281475150]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [686273:341839820]
COMMIT
# Completed on Thu Nov  8 15:53:28 2012
