etc/iptables/iptables-probability-two
# Generated by iptables-save v1.4.8 on Sun Nov  4 19:07:45 2012
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT
# Completed on Sun Nov  4 19:07:45 2012
# Generated by iptables-save v1.4.8 on Sun Nov  4 19:07:45 2012
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A OUTPUT -j CONNMARK --restore-mark --nfmask 0xffffffff --ctmask 0xffffffff 
-A OUTPUT -m state --state NEW -m statistic --mode random --probability 0.125000 -j MARK --set-xmark 0x1/0xffffffff
-A OUTPUT -m state --state NEW -m statistic --mode random --probability 0.125000 -j MARK --set-xmark 0x2/0xffffffff
-A OUTPUT -m state --state NEW -m statistic --mode random --probability 0.125000 -j MARK --set-xmark 0x3/0xffffffff 
-A OUTPUT -m state --state NEW -m statistic --mode random --probability 0.125000 -j MARK --set-xmark 0x4/0xffffffff 
-A OUTPUT -m state --state NEW -m statistic --mode random --probability 0.125000 -j MARK --set-xmark 0x5/0xffffffff 
-A OUTPUT -m state --state NEW -m statistic --mode random --probability 0.125000 -j MARK --set-xmark 0x6/0xffffffff 
-A OUTPUT -m state --state NEW -m statistic --mode random --probability 0.125000 -j MARK --set-xmark 0x7/0xffffffff 
-A OUTPUT -m state --state NEW -m statistic --mode random --probability 0.125000 -j MARK --set-xmark 0x8/0xffffffff 
-A OUTPUT -j CONNMARK --save-mark --nfmask 0xffffffff --ctmask 0xffffffff 
-A OUTPUT -s 192.168.2.126/32 -d 192.168.2.253/32 -j MARK --set-xmark 0x10/0xffffffff
COMMIT
# Completed on Sun Nov  4 19:07:45 2012
# Generated by iptables-save v1.4.8 on Sun Nov  4 19:07:45 2012
*nat
:PREROUTING ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A POSTROUTING -o ppp0 -j MASQUERADE 
-A POSTROUTING -o ppp1 -j MASQUERADE 
-A POSTROUTING -o ppp2 -j MASQUERADE 
-A POSTROUTING -o ppp3 -j MASQUERADE 
-A POSTROUTING -o ppp4 -j MASQUERADE 
-A POSTROUTING -o ppp5 -j MASQUERADE 
-A POSTROUTING -o ppp6 -j MASQUERADE 
-A POSTROUTING -o ppp7 -j MASQUERADE 
COMMIT
# Completed on Sun Nov  4 19:07:45 2012
